--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,9 @@
-cmake_minimum_required(VERSION 3.10)
-
-project(OrderBook VERSION 1.0)
+cmake_minimum_required(VERSION 3.14)
+project(OrderBook)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-include_directories(include)
+find_package(GTest REQUIRED)
 
-set(SOURCES
-    src/main.cpp
-    src/Order.cpp
-    src/OrderBook.cpp
-)
-
-add_executable(${PROJECT_NAME} ${SOURCES})
+add_subdirectory(src)
+add_subdirectory(tests)
